--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -63,17 +63,17 @@
       "metadata": {
         "id": "T-Rpz5U-XzYl",
         "colab_type": "code",
-        "outputId": "0cce2775-04c8-4e4a-e8c4-fd30e3f5e700",
+        "outputId": "7a6cad6f-52dd-4c1f-b665-b23bb2144fec",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 188
         }
       },
       "source": [
         "!pip install ipython-autotime\n",
         "%load_ext autotime"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
             "  Downloading https://files.pythonhosted.org/packages/e6/f9/0626bbdb322e3a078d968e87e3b01341e7890544de891d0cb613641220e6/ipython-autotime-0.1.tar.bz2\n",
             "Building wheels for collected packages: ipython-autotime\n",
             "  Building wheel for ipython-autotime (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for ipython-autotime: filename=ipython_autotime-0.1-cp36-none-any.whl size=1832 sha256=20b512b0157969323b4bb3437f5a9c91c2eeaf94ca250fdfcc779532a0c24ad5\n",
+            "  Created wheel for ipython-autotime: filename=ipython_autotime-0.1-cp36-none-any.whl size=1832 sha256=c9a4aebeeccf376b9b80630178141c25ac044c82009c838482c59f33ce357dd6\n",
             "  Stored in directory: /root/.cache/pip/wheels/d2/df/81/2db1e54bc91002cec40334629bc39cfa86dff540b304ebcd6e\n",
             "Successfully built ipython-autotime\n",
             "Installing collected packages: ipython-autotime\n",
@@ -995,6 +995,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Ed1IZRJgXPk7",
+        "colab_type": "text"
+      },
+      "source": [
+        "It is BETTER to use explicitly `base=16` for example.\n",
+        "</br>\n",
+        "Max. number of base is **36** because there are 26 letters **[a-z]** and 10 numbers **[0-9]**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WzQBK5mkptbD",
         "colab_type": "text"
       },
@@ -1053,9 +1065,679 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "27DZtLZifmNC",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 4.INTEGERS: Constructor and Bases (Part 2) => Exercises"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sJmprdTUuSTt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "423a0cb8-44aa-44a9-99c8-74a734f11305"
+      },
+      "source": [
+        "from fractions import Fraction\n",
+        "\n",
+        "a = Fraction(22 / 7)\n",
+        "\n",
+        "print(float(a))\n",
+        "print(int(a))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.142857142857143\n",
+            "3\n",
+            "time: 2.89 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aXIVtUy8m3Zr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b9b7b210-713c-46d0-8a4b-12d8cb8f753c"
+      },
+      "source": [
+        "int(\"101\", base=2)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 7.95 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VjEoYpf0nZGz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Python uses ``a-z`` for bases from 11 to 36.\n",
+        "</br>\n",
+        "Note that the letters are not case sensitive."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IE0gmCeinX5M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "2917220e-b812-4ab1-cb06-78fd90cf6cb9"
+      },
+      "source": [
+        "print(int(\"F1A\", base=16))\n",
+        "print(int(\"f1a\", base=16))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3866\n",
+            "3866\n",
+            "time: 1.94 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "72_QMXcnxfrC",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Base Representations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zUnAPcL_nnWt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "00e0bcc0-e0fc-432c-c79f-f02091dc65c4"
+      },
+      "source": [
+        "print(f'binary representation of 10: {bin(10)}')\n",
+        "print(f'octaal representation of 10: {oct(10)}')\n",
+        "print(f'hexadcimal representation of 10: {hex(10)}')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "binary representation of 10: 0b1010\n",
+            "octaal representation of 10: 0o12\n",
+            "hexadcimal representation of 10: 0xa\n",
+            "time: 3.11 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xq9bTojK64NT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note the `0b`, `0o` and `0x` prefixes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WJIG610YxpEQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "f9602183-8642-4037-e795-ed54e9e5cbe9"
+      },
+      "source": [
+        "a = int('1010', 2)\n",
+        "b = int('0b1010', 2)\n",
+        "c = 0b1010\n",
+        "print(a, b, c)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 10 10\n",
+            "time: 3.15 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "heDcp6lV7AK3",
+        "colab_type": "text"
+      },
+      "source": [
+        "For literals, the ``a-z`` characters are not case-sensitive either"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zy9r7-Vs660x",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "8316342a-7c19-4025-8520-724d4461cfee"
+      },
+      "source": [
+        "a = 0xf1a\n",
+        "b = 0xF1a\n",
+        "c = 0xF1A\n",
+        "print(a, b, c)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3866 3866 3866\n",
+            "time: 6.45 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q3fpEKsU8q7z",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Custom Rebasing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xjH-LHXT8tCC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Python only provides built-in function to rebase to base 2, 8 and 16.\n",
+        "\n",
+        "For other bases, you have to provide your own algorithm (or leverage some 3rd party library of your choice)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uqvLUUH_7CX9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ac694293-1ddd-4fd0-d79e-48860e2adb22"
+      },
+      "source": [
+        "def from_base10(n, b):\n",
+        "    if b < 2:\n",
+        "        raise ValueError('Base b must be >= 2')\n",
+        "    if n < 0:\n",
+        "        raise ValueError('Number n must be >= 0')\n",
+        "    if n == 0:\n",
+        "        return [0]\n",
+        "    digits = []\n",
+        "    while n > 0:\n",
+        "        # m = n % b\n",
+        "        # n = n // b\n",
+        "        # which is the same as:\n",
+        "        n, m = divmod(n, b)\n",
+        "        digits.insert(0, m)\n",
+        "    return digits"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 9.17 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "18A-Juh09-24",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "802294aa-3e4c-4fd6-9ed1-0a105665b9d7"
+      },
+      "source": [
+        "from_base10(255, 16)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[15, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 2.9 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5l2Ntxrw-CkR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Next we may want to encode the digits into strings using different characters for each digit in the base"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dm7Ra5rF9_Ub",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b2b483f8-808b-4634-d5cd-e9894bb53f5b"
+      },
+      "source": [
+        "def encode(digits, digit_map):\n",
+        "    # we require that digit_map has at least as many\n",
+        "    # characters as the max number in digits\n",
+        "    if max(digits) >= len(digit_map):\n",
+        "        raise ValueError(\"digit_map is not long enough to encode digits\")\n",
+        "    \n",
+        "    # we'll see this later, but the following would be better:\n",
+        "    return ''.join([digit_map[d] for d in digits])\n",
+        "    \n",
+        "    "
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 2.33 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dHOWcy0O-DEN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9258d086-8972-40e1-897c-bdc79b30a91d"
+      },
+      "source": [
+        "encode([1, 0, 1], \"FT\")"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'TFT'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 3.96 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BACUiOCf-FB0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "80a4ef24-df8e-4828-c3a1-6748a1d3e809"
+      },
+      "source": [
+        "encode([1, 10, 11], '0123456789AB')"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1AB'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 3.21 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SmX7ggFV-KAd",
+        "colab_type": "text"
+      },
+      "source": [
+        "And we can combine both functions into a single one for easier use:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IdZMSJiD-GWp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "95f6e5c9-ebfd-46d0-f07d-1c91edc0d991"
+      },
+      "source": [
+        "def rebase_from10(number, base):\n",
+        "    digit_map = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+        "    if base < 2 or base > 36:\n",
+        "        raise ValueError('Invalid base: 2 <= base <= 36')\n",
+        "    # we store the sign of number and make it positive\n",
+        "    # we'll re-insert the sign at the end\n",
+        "    sign = -1 if number < 0 else 1\n",
+        "    number *= sign\n",
+        "    \n",
+        "    digits = from_base10(number, base)\n",
+        "    encoding = encode(digits, digit_map)\n",
+        "    if sign == -1:\n",
+        "        encoding = '-' + encoding\n",
+        "    return encoding"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 6.47 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gkLW5CJt_Olf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "ed705d81-799f-48ef-be69-f571aed2927a"
+      },
+      "source": [
+        "e = rebase_from10(10, 2)\n",
+        "print(e)\n",
+        "print(int(e, 2))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1010\n",
+            "10\n",
+            "time: 2.5 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1B8JD3Zy_PM5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "029b4627-f8b2-4ebb-b4d7-a0185a4e7cb5"
+      },
+      "source": [
+        "e = rebase_from10(-10, 2)\n",
+        "print(e)\n",
+        "print(int(e, 2))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-1010\n",
+            "-10\n",
+            "time: 2.7 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FapuV7X-_Q5V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a0927892-4ad6-4d88-91e3-64a78221a145"
+      },
+      "source": [
+        "rebase_from10(131, 11)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10A'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 3.42 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3EqGbMFw_S14",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bb10486d-c468-42c0-a273-bf2f9328006a"
+      },
+      "source": [
+        "rebase_from10(4095, 16)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'FFF'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 2.33 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FOoz-mWE_USi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb888750-2813-48df-c21b-e06776ba83ea"
+      },
+      "source": [
+        "rebase_from10(-4095, 16)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'-FFF'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "time: 3.12 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VV0zyAfe_V6V",
         "colab_type": "code",
         "colab": {}
       },
