--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -4560,9 +4560,397 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kWMHWNWaZrPY",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding Time"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aV-q0YA3aS5w",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Rounding"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xqgpVg-zNxKi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "56fedd19-fceb-40a3-9b57-b0d857f1e444"
+      },
+      "source": [
+        "help(round)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Help on built-in function round in module builtins:\n",
+            "\n",
+            "round(...)\n",
+            "    round(number[, ndigits]) -> number\n",
+            "    \n",
+            "    Round a number to a given precision in decimal digits (default 0 digits).\n",
+            "    This returns an int when called with one argument, otherwise the\n",
+            "    same type as the number. ndigits may be negative.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fILfzed8aYxz",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### n = 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GUPOlsmnaV4g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb22babe-085f-484d-89ab-3a22a13d92cf"
+      },
+      "source": [
+        "a = round(1.5)\n",
+        "a, type(a)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, int)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wDsNopbQafMw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9281a49d-88b9-4e3f-e264-d0bb720cc45b"
+      },
+      "source": [
+        "a = round(1.5, 0)\n",
+        "a,  type(a)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2.0, float)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iw91uc_fanSo",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### n > 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "40sxBjm0akzy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0d694809-4986-4217-93db-02ea82d34863"
+      },
+      "source": [
+        "round(1.88888, 3), round(1.8888, 2), round(1.8888, 1), round(1.8888, 0)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1.889, 1.89, 1.9, 2.0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x4hjuqmBdqjF",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### n < 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yf96IqEudvNE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ea4e4003-23e1-4813-c0fa-d45176f7e322"
+      },
+      "source": [
+        "round(888.88, 1), round(888.88, 0), \\\n",
+        "round(888.88, -1), round(888.88, -2), round(888.88, -3), round(888.88, -4)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(888.9, 889.0, 890.0, 900.0, 1000.0, 0.0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AupUpxCfaxPe",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Ties"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c7JrSnHeawTx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7807069a-d548-42e2-a815-46de60b9503f"
+      },
+      "source": [
+        "round(1.25, 1)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "95Un-XqZa0G8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ead82dde-1409-4dfd-a88c-e7755b5e24ab"
+      },
+      "source": [
+        "round(1.35, 1)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8FSI0hiPa3Ih",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is rounding to nearest, with ties to nearest number with even least significant digit, aka Banker's Rounding.\n",
+        "</br>\n",
+        "</br>\n",
+        "Works similarly with **n** negative."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PsZ-zGKua1Tt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "fc66d2a9-d612-41cc-bc9f-9eec8ee11e2b"
+      },
+      "source": [
+        "print(round(15, -1))\n",
+        "print(round(25, -1))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20\n",
+            "20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "49BrscLkbHgO",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Rounding to closest, ties away from zero"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XS_1_xlNbJb1",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is traditionally the type of rounding taught in school, which is different from the Banker's Rounding implemented in Python (and in many other programming languages)\n",
+        "</br> \n",
+        "</br>\n",
+        "1.5 --> 2 <br>\n",
+        "2.5 --> 3 <br>\n",
+        "\n",
+        "-1.5 --> -2 <br>\n",
+        "-2.5 --> -3 <br>\n",
+        "</br>\n",
+        "</br>\n",
+        "To do this type of rounding (to nearest 1) we can add (for positive numbers) or subtract (for negative numbers) 0.5 and then truncate the resulting number."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SexxY-zMbDiS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def _round(x):\n",
+        "    from math import copysign\n",
+        "    return int(x + 0.5 * copysign(1, x))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6wPt61yBbXYr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "04859ff6-2df9-4b1c-da13-b849f8717fc6"
+      },
+      "source": [
+        "print(round(1.5), _round(1.5))\n",
+        "print(round(2.5), _round(2.5))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 2\n",
+            "2 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gut0LAYzbn1t",
         "colab_type": "code",
         "colab": {}
       },
