--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -4171,17 +4171,17 @@
       "metadata": {
         "id": "sH0WDIyYpS0t",
         "colab_type": "code",
+        "outputId": "49fc2614-3637-4f51-a754-e3d1dcfa1b8b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "49fc2614-3637-4f51-a754-e3d1dcfa1b8b"
+        }
       },
       "source": [
         "from math import trunc\n",
         "trunc(10.3), trunc(10.5), trunc(10.6)    "
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4202,16 +4202,16 @@
       "metadata": {
         "id": "5RaRO4ezKU1y",
         "colab_type": "code",
+        "outputId": "9fcf9da2-522c-40dd-b111-6cc18d691ca3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9fcf9da2-522c-40dd-b111-6cc18d691ca3"
+        }
       },
       "source": [
         "trunc(-10.6), trunc(-10.5), trunc(-10.3)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4242,16 +4242,16 @@
       "metadata": {
         "id": "QR5yT1RbKYQs",
         "colab_type": "code",
+        "outputId": "63e05f25-0f09-4d86-e412-d14a2808adcb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "63e05f25-0f09-4d86-e412-d14a2808adcb"
+        }
       },
       "source": [
         "int(10.3), int(10.5), int(10.6)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4272,16 +4272,16 @@
       "metadata": {
         "id": "KKv0K1VoKeDC",
         "colab_type": "code",
+        "outputId": "7699c0b2-b823-4a67-dde9-7a2fffb1381e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7699c0b2-b823-4a67-dde9-7a2fffb1381e"
+        }
       },
       "source": [
         "int(-10.5), int(-10.5), int(-10.4)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4312,17 +4312,17 @@
       "metadata": {
         "id": "rVUmAM_MKhmx",
         "colab_type": "code",
+        "outputId": "1500745c-a839-47e6-f4d2-08cd6d08710a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1500745c-a839-47e6-f4d2-08cd6d08710a"
+        }
       },
       "source": [
         "from math import floor\n",
         "floor(10.4), floor(10.5), floor(10.6)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4343,16 +4343,16 @@
       "metadata": {
         "id": "m16NIji0Kmni",
         "colab_type": "code",
+        "outputId": "2e7a0b93-8d00-46aa-8542-2b50b7bbc9dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2e7a0b93-8d00-46aa-8542-2b50b7bbc9dc"
+        }
       },
       "source": [
         "floor(-10.4), floor(-10.5), floor(-10.6)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4383,17 +4383,17 @@
       "metadata": {
         "id": "DC23pB7fKsOu",
         "colab_type": "code",
+        "outputId": "5eced138-38d4-45a7-f412-637280d74d01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5eced138-38d4-45a7-f412-637280d74d01"
+        }
       },
       "source": [
         "from math import ceil\n",
         "ceil(10.4), ceil(10.5), ceil(10.6)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4414,16 +4414,16 @@
       "metadata": {
         "id": "VvLSGItkK0zO",
         "colab_type": "code",
+        "outputId": "81d718fd-cc16-47c4-9a10-c2643e9dae9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "81d718fd-cc16-47c4-9a10-c2643e9dae9e"
+        }
       },
       "source": [
         "ceil(-10.4), ceil(-10.5), ceil(-10.6)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4584,16 +4584,16 @@
       "metadata": {
         "id": "xqgpVg-zNxKi",
         "colab_type": "code",
+        "outputId": "56fedd19-fceb-40a3-9b57-b0d857f1e444",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        },
-        "outputId": "56fedd19-fceb-40a3-9b57-b0d857f1e444"
+        }
       },
       "source": [
         "help(round)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4627,17 +4627,17 @@
       "metadata": {
         "id": "GUPOlsmnaV4g",
         "colab_type": "code",
+        "outputId": "cb22babe-085f-484d-89ab-3a22a13d92cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cb22babe-085f-484d-89ab-3a22a13d92cf"
+        }
       },
       "source": [
         "a = round(1.5)\n",
         "a, type(a)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4658,17 +4658,17 @@
       "metadata": {
         "id": "wDsNopbQafMw",
         "colab_type": "code",
+        "outputId": "9281a49d-88b9-4e3f-e264-d0bb720cc45b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9281a49d-88b9-4e3f-e264-d0bb720cc45b"
+        }
       },
       "source": [
         "a = round(1.5, 0)\n",
         "a,  type(a)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4699,16 +4699,16 @@
       "metadata": {
         "id": "40sxBjm0akzy",
         "colab_type": "code",
+        "outputId": "0d694809-4986-4217-93db-02ea82d34863",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0d694809-4986-4217-93db-02ea82d34863"
+        }
       },
       "source": [
         "round(1.88888, 3), round(1.8888, 2), round(1.8888, 1), round(1.8888, 0)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4739,17 +4739,17 @@
       "metadata": {
         "id": "Yf96IqEudvNE",
         "colab_type": "code",
+        "outputId": "ea4e4003-23e1-4813-c0fa-d45176f7e322",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ea4e4003-23e1-4813-c0fa-d45176f7e322"
+        }
       },
       "source": [
         "round(888.88, 1), round(888.88, 0), \\\n",
         "round(888.88, -1), round(888.88, -2), round(888.88, -3), round(888.88, -4)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4780,16 +4780,16 @@
       "metadata": {
         "id": "c7JrSnHeawTx",
         "colab_type": "code",
+        "outputId": "7807069a-d548-42e2-a815-46de60b9503f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7807069a-d548-42e2-a815-46de60b9503f"
+        }
       },
       "source": [
         "round(1.25, 1)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4810,16 +4810,16 @@
       "metadata": {
         "id": "95Un-XqZa0G8",
         "colab_type": "code",
+        "outputId": "ead82dde-1409-4dfd-a88c-e7755b5e24ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ead82dde-1409-4dfd-a88c-e7755b5e24ab"
+        }
       },
       "source": [
         "round(1.35, 1)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4853,17 +4853,17 @@
       "metadata": {
         "id": "PsZ-zGKua1Tt",
         "colab_type": "code",
+        "outputId": "fc66d2a9-d612-41cc-bc9f-9eec8ee11e2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "fc66d2a9-d612-41cc-bc9f-9eec8ee11e2b"
+        }
       },
       "source": [
         "print(round(15, -1))\n",
         "print(round(25, -1))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4925,17 +4925,17 @@
       "metadata": {
         "id": "6wPt61yBbXYr",
         "colab_type": "code",
+        "outputId": "04859ff6-2df9-4b1c-da13-b849f8717fc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "04859ff6-2df9-4b1c-da13-b849f8717fc6"
+        }
       },
       "source": [
         "print(round(1.5), _round(1.5))\n",
         "print(round(2.5), _round(2.5))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4948,9 +4948,69 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uI6LicfrevK0",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 10.DECIMALS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rtVPkA5Ne4Vm",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1IRwhcS0jtnnkgU8xP7bka9ushUuBOuz6)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Un63xvTe4MJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1JhIeJ9926gkB-FO5VT3TAcgl0ZL1P8EJ)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wmhgnZ3Ne4D-",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1TLzo1I_gY1U-Sr-jnIInrPZE50wTJEYP)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UhzZV0VFe37c",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1O_7P5BPuopyXdZjprfylUB-JtJb98ozx)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4UdXH38Ze3xw",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1gN49UTbhfsmbn0WZOXLRES7Sw5-orx1p)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Gut0LAYzbn1t",
+        "id": "A9eAR99-e12u",
         "colab_type": "code",
         "colab": {}
       },
